--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "fs": "^0.0.1-security",
+    "net": "^1.0.2",
+    "tls": "^0.0.1",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1",
-    "watson-developer-cloud": "^2.31.1"
+    "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
