--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "shebang-loader": "^0.0.1",
     "tls": "^0.0.1",
     "vue": "^2.2.6",
+    "vue-chartjs": "^2.6.2",
     "vue-router": "^2.3.1",
     "watson-developer-cloud": "^2.31.1"
   },
