--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "chart.js": "^2.5.0",
     "chartjs": "^0.3.24",
     "dotenv": "^4.0.0",
     "fs": "^0.0.1-security",
@@ -22,6 +23,7 @@
     "shebang-loader": "^0.0.1",
     "tls": "^0.0.1",
     "vue": "^2.2.6",
+    "vue-chartjs": "^2.6.3",
     "vue-router": "^2.3.1",
     "watson-developer-cloud": "^2.31.1"
   },
